test/Fail/Issue217.agda

module Issue217 where

record A : Set where
  ⊥ : Set
  ⊥ = ⊥
