test/Fail/Issue217.err
Issue217.agda:4.1-6.8: error: [TerminationIssue]
Termination checking failed for the following function:
  ⊥
Problematic call:
  ⊥ (at Issue217.agda:6.7-8)
